# torc

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  GEMINI.md  README.md  build.rs  deny.toml  docker-entrypoint.sh  release.toml
python_client/: pyproject.toml
python_client/examples/sienna/: README.md  julia_env.sh
python_client/src/torc/: api.py
python_client/tests/: conftest.py  test_crud_operations.py  test_workflow.py
python_client/tests/scripts/: run_jobs.py
torc-dash/: Cargo.toml
torc-dash/static/: index.html
torc-dash/static/css/: style.css
torc-dash/static/js/: api.js  app-chat.js  app-core.js  app-debugging.js  app-details.js  app-events.js  app-job-details.js  app-modals.js  app-resources.js  app-tables.js  app-utils.js  app-wizard.js  app-workflows.js  app.js
torc-mcp-server/: Cargo.toml
torc-server/: Cargo.toml
torc-server/.sqlx/: query-0291cd3dd8e309e938cfe237e35b063cc711231c548e5f6639e772d8d5105475.json  query-0a45c0fb5e73a9dfb976feca78bf7aab581a29928e1eecea46afb321bb332cde.json  query-11b7f969d2469bea11bb37ef2412247bfd607e24f99688a9d5bfcbb5938d69b4.json  query-13e015c082a9a9bf2b9c6807716aba1d5d9ef4efdd7c33f86a751473267f7bd7.json  query-15aaf699ec9cdcccb1fc5ece04434e2ecef320ab386313f5ffcd0bfc2a1b5dce.json  query-17b609df5736bdd3a5f512c882c0fdf1eebd528d6c32cc4ecd13ff506a5fdfbf.json  query-18881bdffaedae6b4389e57912c82633bc0aa25e58adf5481a894d50b5373dbc.json  query-1bf98d805394ee71dc0f6fdbd4313a5321b246cc0d42e7e336d3cf48c8e84718.json  query-1cb5b22789b838b714b506c0f0d853713844c78bb7111e1a431cd229719b3c49.json  query-1d8a5246207592e77543252c0693f6d5db2d676d95affbf0c289d355d38aa739.json  query-1edaa300a0d5ea99904948fddec03fb7774939fecd6b958201cb8d14122fe535.json  query-23a12c827076cd273dff6c9e952a3dc32a275e039d5248be0f677fafb4a6429e.json  query-2459765b98380b02f0acca1e168cbaeae71c1e457b9d7a19d8d6df023c4a3807.json  query-25382eca866bbb8fff91c1b3bc323ee09ba8985f87b698b1e6840e9ca8264a93.json  query-256998350103b8629c153b3623dd95eb225b0509ec0866c2fadc62f1fe405807.json  query-3c2ae290529b04577dd083f7a9e8b586af13cb10c7610751e52b054f3622107f.json  query-45d8582e9d88c9c2b0a268da06a607e9cb7ab6733ce81bc32c858d17f0f9977a.json  query-476b5489b82222dfe0880ed5ecc29710e1d067d003edd44478424c182ada43e0.json  query-6462f38f606bca9effa8882568b02d3079d646f2b472a338ef05cb4b6b5f9c25.json  query-655eb2681660c4d98e189ede713d1f0b557e16eabb69345858f9bfad07bde997.json  query-6802629edc02068cf9eae9374fd0713fce0b074cd28f6444a52b7d11681e9d22.json  query-719f2f8978b83f756485acea8d4ae2040140c928a6432170794fb7b13613a541.json  query-71a053625378076aa27c0f42dbdc377d4b15838153de28f656b5d7dbcac7f590.json  query-73a53ff9ca4fd42e5732a0bd11137e51de851c19f39f0d807f718bdd3515699b.json  query-74df1b8a7d39f795128153fd7f4180f34f8fbf4414b4677de80a5744a63c5939.json  query-798e2859e55d25f4f8d230a3cf2e3eb22ed5bf18cf0cdac1adb59c4c69635596.json  query-7c2263053dd7f2c52d12f1fde2c9fbce01237725658b85accd938f0570640147.json  query-7cf9869fae328b00b273a6b115eca6394e4f8ac5664d66caa91adf6fbb9ccac3.json  query-7e43d4a9d643a88c115257b2322787c50bbe005116b12e5241e53b97c5ea7ff9.json  query-84795e639a5b5b358973aaa24219c26114b1b3ac5e5f381354d04fd3a85bf694.json  query-8965e4c5cb799cd4fffb9e745257acafab03e0782e895085390efa917c957543.json  query-89bfd74464280931272ee5775740ca2f5cc254c31d34a177d045caba34866af6.json  query-8a64668fcd503c9a7f63f273788fbfa25cc8c20fccdc397ca6e266be08e19218.json  query-9eda8987b12ae685beb551ad351ddb03673811498f28b32f7ff576109a674e2c.json  query-a13a5b19dbd44f894304ee61fb7584b43ccfb9068985904d2dac85391cd5a0d7.json  query-a7a4c95d804640e42b29ffe22b327f11f39795ea3aa1eb6bf37834c5ef9564b0.json  query-ac0263b317068b2431d7bb0a923be18bc5f89b8894d83bf0fba39c98ec852658.json  query-ad98ffd1c095eabee9887780c742489372348e8d400b4088bfc060c10f978fb9.json  query-b422e93a82cdc500a3099b420c1b9f4f628dd6e19245e54e2568a2ae6be73f02.json  query-b665ff06897a4581b62e74d361fc5795b048e014628c41e06f20e32a3737fca2.json  (+12 more)
torc-server/migrations/: 20250101000000_initial_schema.down.sql  20250101000000_initial_schema.up.sql  20251213000000_event_timestamp_to_integer.down.sql  20251213000000_event_timestamp_to_integer.up.sql  20251223000000_add_active_compute_node_id.down.sql  20251223000000_add_active_compute_node_id.up.sql  20251225000000_add_is_recovery_to_workflow_action.down.sql  20251225000000_add_is_recovery_to_workflow_action.up.sql  20251226000000_add_remote_worker.down.sql  20251226000000_add_remote_worker.up.sql  20251227000000_add_compute_node_min_time_for_new_jobs.down.sql  20251227000000_add_compute_node_min_time_for_new_jobs.up.sql  20251229000000_add_access_groups.down.sql  20251229000000_add_access_groups.up.sql  20251230000000_add_is_system_to_access_group.down.sql  20251230000000_add_is_system_to_access_group.up.sql  20260109000000_add_slurm_defaults.down.sql  20260109000000_add_slurm_defaults.up.sql  20260110000000_add_failure_handlers.down.sql  20260110000000_add_failure_handlers.up.sql  20260112000000_add_use_pending_failed.down.sql  20260112000000_add_use_pending_failed.up.sql  20260206000000_add_metadata_and_project.down.sql  20260206000000_add_metadata_and_project.up.sql  20260214000000_add_result_indexes.down.sql  20260214000000_add_result_indexes.up.sql  20260222000001_add_workflow_id_to_workflow_status.down.sql  20260222000001_add_workflow_id_to_workflow_status.up.sql  20260223000000_add_ro_crate.down.sql  20260223000000_add_ro_crate.up.sql  20260227000000_add_limit_resources_to_workflow.down.sql  20260227000000_add_limit_resources_to_workflow.up.sql  20260228000000_create_slurm_stats_table.down.sql  20260228000000_create_slurm_stats_table.up.sql  20260301000000_add_step_nodes_to_resource_requirements.down.sql  20260301000000_add_step_nodes_to_resource_requirements.up.sql  20260302000000_add_use_srun_to_workflow.down.sql  20260302000000_add_use_srun_to_workflow.up.sql  20260304000000_add_enable_ro_crate_to_workflow.down.sql  20260304000000_add_enable_ro_crate_to_workflow.up.sql  (+22 more)
torc-server/src/: main.rs
torc-slurm-job-runner/: Cargo.toml
(+954 files in other folders)
