[package]
name = "torc-dash"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
description = "Torc workflow dashboard - web UI with CLI integration"

[[bin]]
name = "torc-dash"
path = "src/main.rs"

[dependencies]
# Torc library for config, client APIs, and network utilities
torc = { workspace = true, features = ["config", "client"] }

# Web server
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "process", "io-util"] }

# HTTP client for proxying
reqwest = { workspace = true, features = ["json", "stream"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Static asset embedding
rust-embed = { workspace = true }

# CLI and config
clap = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Misc
mime_guess.workspace = true

# Streaming
async-stream = "0.3"
futures = { workspace = true }

# Date/time
chrono = "0.4"

# URL parsing
url = { workspace = true }

# UUID for unique temp file names
uuid = { version = "1.11", features = ["v4"] }
