[package]
name = "torc-mcp-server"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
description = "MCP server for Torc workflow management"

[[bin]]
name = "torc-mcp-server"
path = "src/main.rs"

[dependencies]
torc = { workspace = true, features = ["client"] }
clap.workspace = true
rmcp.workspace = true
schemars.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tempfile = "3"
