[package]
name = "torc-server"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
description = "Torc workflow management server"

[[bin]]
name = "torc-server"
path = "src/main.rs"

[[bin]]
name = "torc-htpasswd"
path = "src/bin/torc-htpasswd.rs"

[dependencies]
torc = { workspace = true, features = ["server", "config"] }
tokio.workspace = true
env_logger.workspace = true
dotenvy.workspace = true
clap.workspace = true
log.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tracing-timing.workspace = true
hdrhistogram.workspace = true
service-manager.workspace = true
parking_lot.workspace = true
signal-hook.workspace = true
file-rotate.workspace = true
sqlx.workspace = true
anyhow.workspace = true
serde_json.workspace = true
swagger.workspace = true
hyper.workspace = true
futures.workspace = true
async-trait.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
serde.workspace = true
openssl.workspace = true
tokio-openssl = "0.6.5"
bcrypt.workspace = true
rpassword.workspace = true

[target.'cfg(unix)'.dependencies]
daemonize = "0.5"
