[package]
name = "torc-slurm-job-runner"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
description = "Torc Slurm job runner for HPC environments"

[dependencies]
torc.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
chrono.workspace = true
hostname.workspace = true
serde_json.workspace = true
signal-hook.workspace = true
